tests/script_errors/const_expr_reverse_range/error.txt
Error: 
    1 | {"snot": [0,1,2,3,4,5,6]}.snot[5:2]
      |                                ^^^ A range's end cannot be smaller than its start, 5:2 is invalid
